--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todo </title>
+    <title>TodoJS</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <nav>
-        <div class="logo">Todo</div>
+        <div class="logo">TodoJS</div>
         <!-- <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
