--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
         </div>
         <div class="confirm-modal">
-            <p>Are you sure you want to delete this note?</p>
+            <p class="modal-msg">Are you sure you want to delete this note?</p>
             <button id="cancel-del" onclick="cancelDel()">Cancel</button>
             <button id="confirm-del" onclick="confirmDelNote(id)">Yes</button>
         </div>
