--- a/index.html
+++ b/index.html
@@ -5,34 +5,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TodoJS</title>
+    <title>Todo JS</title>
     <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
     <nav>
         <div class="logo">TodoJS</div>
-        <!-- <ul>
+        <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
-        </ul> -->
+        </ul>
     </nav>
-    <div id="overlay" >
+    <div id="overlay">
     </div>
     <section>
         <div class="btn-container">
-            <button onclick="showModal()" class="btn" id="add-btn">Add Note</button>
-            <button onclick="clearAllNotes()" class="btn">Clear All</button>
+            <button class="btn" id="add-btn">Add Note</button>
+            <button class="btn" id="dlt-all">Clear All</button>
         </div>
-
 
         <div class="modal-container">
             <div class="container-header ">
                 <div class="heading">
-                    <p>Add a New Task</p>
+                    <p id="modal-title"></p>
                 </div>
-                <button id="close-modal" onclick="closeModal()" class="btn">X</button>
+                <button id="close-modal" class="btn">X</button>
             </div>
             <div class="input-container">
                 <p>Title </p>
@@ -41,14 +41,15 @@
                 <p>Description </p>
                 <textarea type="text" name="desc" placeholder="Enter Your Task Content"></textarea>
                 <br>
-                <button onclick="addNote()" id="submit-btn" class="btn modal-btn">Add Task</button>
+                <button id="submit-btn" class="btn modal-btn">Add Task</button>
             </div>
         </div>
         <div class="confirm-modal">
             <p class="modal-msg">Are you sure you want to delete this note?</p>
-            <button id="cancel-del" onclick="cancelDel()">Cancel</button>
-            <button id="confirm-del" onclick="confirmDelNote(id)">Yes</button>
+            <button id="cancel-del">Cancel</button>
+            <button id="confirm-del">Yes</button>
         </div>
+
         <div class="container">
             <!-- 
             <div class="box-note">
@@ -61,8 +62,11 @@
                 </div>
             </div> -->
 
+
         </div>
     </section>
+
+
     <script src="script.js"></script>
 </body>
 
